2004/08/13 10:27 (+0200) kaffeetisch

	* Gnome2.pm, NEWS: Version 1.013.

2004/08/13 10:19 (+0200) kaffeetisch

	* t/GnomeProgram.t, xs/GnomeProgram.xs: If available, use the new
	gnome_program_init_paramv to wrap gnome_program_init properly.

2004/07/19 12:51 (+0200) kaffeetisch

	* Gnome2.pm, NEWS: Version 1.012.

2004/07/18 19:44 (+0200) kaffeetisch

	A t/GnomeSound
	* MANIFEST: Add a test for GnomeSound.  It's not run during make
	test though, because we can't be sure there's a sound server
	running.

	* t/GnomeConfig.t: Test drop_all.

	* t/GnomeIconList.t: Test icon_is_visible and get_icon_at.

	* t/GnomeThumbnail.t: Use a version check for has_uri and is_valid
	instead of the unconditional skip now that the bug has been fixed.

	* t/GnomePasswordDialog.t
	* xs/GnomePasswordDialog.xs: Bind and test
	set_show_userpass_buttons and anon_selected.

	* xs/GnomeColorPicker.xs
	* xs/GnomeEntry.xs
	* xs/GnomeFontPicker.xs
	* xs/GnomeIconTheme.xs
	* xs/GnomePopupMenu.xs: Add #undef GNOME_DISABLE_DEPRECATED to
	stuff that was deprecated after we wrapped it.

2004/06/28 19:35 (+0200) kaffeetisch

	* Gnome2.pm
	* NEWS
	* README: Version 1.011.

2004/06/14 19:35 (+0200) kaffeetisch

	* t/GnomeDruid.t: Test the fixed set_contents_background, now that
	the properties were added.

	* t/GnomeIconList.t
	* xs/GnomeIconList.xs: Bind and test select_all.

2004/05/29 18:39 (+0200) kaffeetisch

	* Gnome2.pm
	* NEWS: Unstable version 1.010.

2004/05/28 23:58 (+0200) kaffeetisch

	* Gnome2.pm: Actually use() Gnome2::Canvas so users of Gnome2 are
	not required to do so themselves.

2004/05/28 13:12 (+0200) kaffeetisch

	* t/GnomeIconTheme.t: Use the gnome-fs-directory icon.

2004/05/22 17:50 (+0200) kaffeetisch

	* t/GnomeIconTheme.t: Check if the icon data is a hash reference.

2004/05/21 16:08 (+0200) kaffeetisch

	* xs/GnomeAppHelper.xs: Make gnome2perl_popup_menu_activate_func,
	gnome2perl_popup_menu_activate_func_destroy,
	gnome2perl_refill_info_common, gnome2perl_refill_info,