@@ -2,9 +2,9 @@ AUTHORS
 ChangeLog
 Gnome2.pm
 LICENSE
-MANIFEST
+MANIFEST			This list of files
 MANIFEST.SKIP
-META.yml			Module meta-data in YAML
+META.yml
 Makefile.PL
 NEWS
 README
@@ -18,6 +18,7 @@ gnome.typemap
 gnome2perl.h
 maps
 perl-Gnome2.spec.in
+podifyenums.pl
 t/Gnome.t
 t/GnomeApp.t
 t/GnomeAppBar.t
