@@ -58,6 +58,10 @@ mkdir 'build', 0777;
 our @xs_files = <xs/*.xs>;
 our %pod_files = (
 	'Gnome2.pm' => '$(INST_MAN3DIR)/Gnome2.$(MAN3EXT)',
+	# enums.pod is generated by rules we add to the postamble, below.
+	# it is generated straight into blib to avoid dependency problems.
+	'$(INST_LIB)/$(FULLEXT)/enums.pod'
+	                   => '$(INST_MAN3DIR)/Gnome2::enums.$(MAN3EXT)',
 	# we will be installing a whole slew of pod files, generated directly
 	# from the xs source -- but to have them installed and manified
 	# properly, we have to know their names at Makefile.PL time.
@@ -129,5 +133,10 @@ sub MY::postamble {
 			'PERL_GTK' => $build_reqs{'perl-Gtk2'},
 			'PERL_GNOME_CANVAS' => $build_reqs{'perl-Gnome2-Canvas'},
 			'PERL_GNOME_VFS' => $build_reqs{'perl-Gnome2-VFS'},
-		);
+		)
+          . "
+\$(INST_LIB)/\$(FULLEXT)/enums.pod : \$(BLIB_DONE) maps podifyenums.pl
+	\$(PERLRUNINST) -M\$(NAME) podifyenums.pl \$(NAME) maps > \$@
+";
 }
+
