@@ -1,3 +1,9 @@
+2004/08/23 21:05 (+0200) kaffeetisch
+
+	* MANIFEST, Makefile.PL, podifyenums.pl: Patch from Kevin
+	C. Krinke adds code to generate Gnome2::enum -- a list of all enum
+	and flag values.
+
 2004/08/13 10:27 (+0200) kaffeetisch
 
 	* Gnome2.pm, NEWS: Version 1.013.
